# vilga

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
cmake/: FindZeroMQ.cmake
vilga/: CMakeLists.txt  testbed.cpp
vilga/include/vilga/: portal.hpp  vilga.h
vilga/include/vilga/detail/: backend.hpp  backend_config.hpp  data.hpp  macros.hpp  named_values.hpp  portal_spell.hpp
vilga/include/vilga/with/: std_types.hpp
vilga/src/detail/: backend.cpp  backend_impl.cpp
vilga/src/include/vilga_impl/: autoconnect_socket.hpp  backend.hpp  backend_config.hpp  thread_local_sockets.hpp
vilga/tests/: CMakeLists.txt  spell_test.cpp  vilga_test.cpp
